--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "telkomdbt",
+  "name": "studynchill",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ionic/react": "^7.0.14",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "ionicons": "^7.1.2",
     "next": "13.4.6",
+    "npm": "^9.7.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
+    "react-live-clock": "^6.1.14",
+    "react-moment": "^1.1.3",
+    "react-youtube": "^10.1.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
